--- a/index.html
+++ b/index.html
@@ -50,6 +50,9 @@
                     <!--------Between-------->
                 </div>
             </div>
+
+            <!----Basket button----->
+            <button @click='ShowBasket'>{{CartItemCount}} Basket</button>
             <div v-else></div>
 
 
