adding note on v-else

--- a/index.html
+++ b/index.html
@@ -53,6 +53,8 @@
 
             <!----Basket button----->
             <button @click='ShowBasket'>{{CartItemCount}} Basket</button>
+
+            <!----The else statement that enables the basket button to change the pages of the web app----->
             <div v-else></div>
 
 
