Adjusted input code

--- a/index.html
+++ b/index.html
@@ -57,11 +57,8 @@
             <!----The else statement that enables the basket button to change the pages of the web app----->
             <div v-else>
                 <h2>Basket</h2>
-                <input {{Order.name}}>
+                <input v-model='Order.name'>
             </div>
-
-
-
 
         </div>
         </div>
