Adding break on code and form title

--- a/index.html
+++ b/index.html
@@ -60,6 +60,9 @@
             <div v-else>
                 <h2>Basket</h2>
 
+                <br>
+
+                <p>Customer Detail</p>
                 <form>
                     <label>Name:</label>
                     <input v-model = 'Order.name'><br><br>
