--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
                     <input v-model = 'Order.name'><br><br>
                     <label>Phone:</label>
                     <input v-model = 'Order.phone'><br><br>
-                    <input type="submit" value="Submit">
+                    <input type="submit" @click='alert' value="Submit" >
                 </form>
 
             </div>
