--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <head>
         <script src="https://cdn.jsdelivr.net/npm/vue/dist/vue.js"></script>
         <script src="https://unpkg.com/vue"></script>
+        <script src=subject.js></script>
 
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/fontawesome/5.15.1/css/all.min.css">
 
