Back button created

--- a/index.html
+++ b/index.html
@@ -69,6 +69,8 @@
             <div v-else>
                 <h2>Basket</h2>
 
+                <button v-on:click="reloadPage">Back</button>
+
                 <div v-for='a in cart'>
                     <div v-for='b in subject'>
 
