--- a/index.html
+++ b/index.html
@@ -90,9 +90,9 @@
                 <p>Customer Detail</p>
                 <form>
                     <label>Name:</label>
-                    <input v-model='Order.name'><br><br>
+                    <input type="text" v-model='Order.name' v-on:keypress="isLetter($event)"><br><br>
                     <label>Phone:</label>
-                    <input v-model='Order.phone'><br><br>
+                    <input type="text" v-model='Order.phone' v-on:keypress="isNumber($event)"><br><br>
                     <input type="submit" @click='alert' value="Submit">
                 </form>
 
