--- a/index.html
+++ b/index.html
@@ -26,17 +26,19 @@
             <div v-if='ShowSubject'>
                 <!------ Vue if statement -------->
 
+                <!---------------- Sort By Code ------------------->
+                <strong>Sort by:</strong>
+                <select v-model="sortedByOption" class="form-control">
+                    <option v-for="sortBy in sortedBy">
+                        {{sortBy}}
+                    </option>
+                </select>
+                <select v-model="orderBy" class="form-control">
+                    <option value="ascending">Ascending</option>
+                    <option value="descending">Descending</option>
+                </select>
+                 <!---------------- End of Sort By Code ------------------->
 
-    <strong>Sort by:</strong>
-    <select v-model="sortedByOption" class="form-control">
-        <option v-for="sortBy in sortedBy">
-            {{sortBy}}
-        </option>
-    </select>
-    <select v-model="orderBy" class="form-control">
-        <option value="acsending">Acsending</option>
-        <option value="descending">Descending</option>
-    </select>
 
                 <div v-for='a in subject'>
                     <!------ Vue for loop (Subject Array) -------->
